# EspX

./: .gitignore  CMakeLists.txt  README.md  keywords.txt  library.json  library.properties  platformio.ini
ArduinoIDESupport/: boards.txt
_backup/: DCX_AppSetting.h
examples/03.ESPectroBasics/Blink/: Blink.ino
examples/03.ESPectroBasics/Button/: Button.ino
examples/04.ESPectroLEDAnimation/Fading/: Fading.ino
examples/04.ESPectroNeopixel/02.Animation/: Animation.ino
examples/04.ESPectroNeopixel/_02_Animation/: _02_Animation.ino
examples/05.ESPectroADC/Potentio/: Potentio.ino
examples/05.ESPectroCloud/LedByCloud/: LedByCloud.ino
examples/05.ESPectroCloud/Potentio/: Potentio.ino
examples/05.WiFi/WiFiConnect/: WiFiConnect.ino
examples/06.ESPectroCloud/LedByCloud/: LedByCloud.ino
lib/SX1272/: SX1272.cpp
src/: DCX_AppSetting.h  DCX_Constants.h  DCX_LoRaService.cpp  DCX_LoRaService.h  DCX_Neopixel_Animation.cpp  DCX_Neopixel_Animation.h  DCX_WifiManager.cpp  DCX_WifiManager.h  ESPectro.cpp  ESPectro.h  ESPectroBase.cpp  ESPectroBase.h  ESPectroBase_ADC.cpp  ESPectroBase_ADC.h  ESPectroBase_BMP280.cpp  ESPectroBase_BMP280.h  ESPectroBase_GpioEx.cpp  ESPectroBase_GpioEx.h  ESPectro_AppSetting.h  ESPectro_Constants.h  ESPectro_GpioEx.cpp  ESPectro_GpioEx.h  ESPectro_LED.cpp  ESPectro_LED.h  ESPectro_Neopixel.cpp  ESPectro_Neopixel.h  ESPectro_WifiManager.cpp  ESPectro_WifiManager.h  IoTHubClient.cpp  IoTHubClient.h  MakestroCloudClient.cpp  MakestroCloudClient.h  SX1272.h  SX1508.cpp  SX1508.h  XBoard.cpp  XBoard.h  XBoard_GpioEx.cpp  XBoard_GpioEx.h  sx1508_registers.h
src/SX1272/: SX1272.cpp
(+8 files in other folders)
